--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -6,5 +6,12 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 # If 'fixed_size' is set to true, then then the YCSBLoader will
 # only add the number of tuples defined in 'num_records'
-fixed_size = true
-num_records = 100000
+#fixed_size = true
+#num_records = 100000
+
+# Specify the distribution for key selection
+#requestdistribution=uniform
+
+# Override operation weights
+#ReadRecordProportion=0.95
+#UpdateRecordProportion=0.05
