updated ycsb read update rate

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -13,5 +13,5 @@ num_records = 100000
 #requestdistribution=uniform
 
 # Override operation weights
-#ReadRecordProportion=0.95
-#UpdateRecordProportion=0.05
+ReadRecordProportion=0.95
+UpdateRecordProportion=0.05
