--- a/log4j.properties
+++ b/log4j.properties
@@ -3,7 +3,7 @@
 ## ----------------------------------------------------------------------------
 
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=INFO, A1
+log4j.rootLogger=DEBUG, A1
 log4j.rootLogger.layout=org.apache.log4j.PatternLayout
 
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
