working on async pulls

--- a/log4j.properties
+++ b/log4j.properties
@@ -11,9 +11,9 @@ log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
 
 ## H-Store Internals
-log4j.logger.edu.brown.hstore.HStoreSite=DEBUG
-log4j.logger.edu.brown.hstore.HStoreCoordinator=DEBUG
-log4j.logger.edu.brown.hstore.PartitionExecutor=DEBUG
+log4j.logger.edu.brown.hstore.HStoreSite=INFO
+log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
+log4j.logger.edu.brown.hstore.PartitionExecutor=INFO
 log4j.logger.edu.brown.hstore.TransactionInitializer=INFO
 log4j.logger.edu.brown.hstore.TransactionQueueManager=INFO
 log4j.logger.edu.brown.hstore.PartitionLockQueue=INFO
@@ -25,8 +25,8 @@ log4j.logger.edu.brown.hstore.callbacks=INFO
 log4j.logger.edu.brown.hstore.handlers=INFO
 log4j.logger.edu.brown.hstore.dispatchers=INFO
 log4j.logger.edu.brown.hstore.cmdlog=INFO
-log4j.logger.edu.brown.hstore.reconfiguration=DEBUG
-log4j.logger.edu.brown.hashing.PlannedHasher=DEBUG
+log4j.logger.edu.brown.hstore.reconfiguration=INFO
+log4j.logger.edu.brown.hashing.PlannedHasher=INFO
 
 log4j.logger.edu.brown.hstore.conf=INFO
 log4j.logger.edu.brown.catalog=INFO
