--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -8,11 +8,12 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 # only add the number of tuples defined in 'num_records'
 
 # Specify the distribution for key selection
-#requestdistribution=uniform
+requestdistribution=custom
 
 # Override operation weights
-ReadRecordProportion=0.95
+ReadRecordProportion=0.65
 UpdateRecordProportion=0.05
+ScanRecordProportion=0.30
 
 fixed_size = true
 num_records = 100000
