--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -8,7 +8,8 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 # only add the number of tuples defined in 'num_records'
 
 # Specify the distribution for key selection
-requestdistribution=custom
+#requestdistribution=custom
+requestdistribution=zipfian
 
 # Override operation weights
 ReadRecordProportion=0.65
@@ -19,4 +20,4 @@ fixed_size = true
 num_records = 100000
 
 # Zipfian skew factor for tuple access
-skew_factor = 0.5
+skew_factor = 0.001
