zipfian skew test for different partitioners

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -12,12 +12,12 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 requestdistribution=zipfian
 
 # Override operation weights
-ReadRecordProportion=0.65
+ReadRecordProportion=0.95
 UpdateRecordProportion=0.05
-ScanRecordProportion=0.30
+#ScanRecordProportion=0.30
 
 fixed_size = true
 num_records = 100000
 
 # Zipfian skew factor for tuple access
-skew_factor = 0.001
+skew_factor = 5
