--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -18,7 +18,7 @@ UpdateRecordProportion=0.05
 
 fixed_size = true
 #num_records = 100000
-num_records = 3200000
+num_records = 400000
 
 # Zipfian skew factor for tuple access
 skew_factor = 5
