Revert to old Becca's code

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -12,15 +12,13 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 requestdistribution=zipfian
 
 # Override operation weights
-ReadRecordProportion=0.81
-UpdateRecordProportion=0.19
+ReadRecordProportion=0.95
+UpdateRecordProportion=0.05
 #ScanRecordProportion=0.30
 
 fixed_size = true
-
+#num_records = 100000
 num_records = 400000
-#num_records = 3200000
 
 # Zipfian skew factor for tuple access
 skew_factor = 5
-
