changing properties file to use zipfianscrambled

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -9,11 +9,12 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 # Specify the distribution for key selection
 #requestdistribution=custom
-requestdistribution=zipfian
+#requestdistribution=zipfian
+requestdistribution=zipfianscrambled
 
 # Override operation weights
-ReadRecordProportion=0.95
-UpdateRecordProportion=0.05
+ReadRecordProportion=0.50
+UpdateRecordProportion=0.50
 #ScanRecordProportion=0.30
 
 fixed_size = true
