fixes to zipfian dist for ycsb

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -10,7 +10,6 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 # Specify the distribution for key selection
 #requestdistribution=custom
 requestdistribution=zipfian
-#requestdistribution=zipfianscrambled
 
 # Override operation weights
 ReadRecordProportion=0.85
@@ -18,8 +17,12 @@ UpdateRecordProportion=0.15
 #ScanRecordProportion=0.30
 
 fixed_size = true
-num_records = 400000
+num_records = 100000
 #num_records = 3200000
 
 # Zipfian skew factor for tuple access
 skew_factor = 0.99
+#scrambled=false
+#mirrored=true
+#interval=3000
+#shift=5
