testing different skew values

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -21,8 +21,13 @@ num_records = 100000
 #num_records = 3200000
 
 # Zipfian skew factor for tuple access
-skew_factor = 0.99
-#scrambled=false
-#mirrored=true
-#interval=3000
-#shift=5
+# for 95% of accesses -> 5% of tuples
+skew_factor = 1.27
+# something in the middle
+#skew_factor = 0.96
+# for 2/3 of accesses -> 1/3 of tuples
+#skew_factor = 0.65
+#scrambled=true
+mirrored=true
+interval=3000
+shift=5
