--- a/build.xml
+++ b/build.xml
@@ -2584,6 +2584,7 @@ UTILITIES
         <arg value="${tWindow}" />
         <arg value="${plannerID}" />
         <arg value="${provisioning}" />
+  		<arg value="${timeLimit}" />
 	&common;
         <classpath refid='project.classpath' />
     <assertions><enable/></assertions>
