--- a/properties/benchmarks/voter.properties
+++ b/properties/benchmarks/voter.properties
@@ -3,3 +3,10 @@
 ## ------------------------------------------------------------
 
 builder = edu.brown.benchmark.voter.VoterProjectBuilder
+
+# zipfian skew parameters
+skew_factor = 0.99
+#scrambled=true
+#mirrored=true
+#interval=3000
+#shift=5
