--- a/properties/benchmarks/voter.properties
+++ b/properties/benchmarks/voter.properties
@@ -5,8 +5,11 @@
 builder = edu.brown.benchmark.voter.VoterProjectBuilder
 
 # zipfian skew parameters
-skew_factor = 0.99
+skew_factor = 0.05
 #scrambled=true
 #mirrored=true
 #interval=3000
 #shift=5
+#random_shift=false
+num_hot_spots=10
+percent_accesses_to_hot_spots=0.99
