added the necessary parameters to make provisioning and monitoring work

--- a/build.xml
+++ b/build.xml
@@ -2584,7 +2584,12 @@ UTILITIES
         <arg value="${tWindow}" />
         <arg value="${plannerID}" />
         <arg value="${provisioning}" />
-  		<arg value="${timeLimit}" />
+  	<arg value="${timeLimit}" />
+  	<arg value="${monitoring}" />
+  	<arg value="${sitesPerHost}" />
+  	<arg value="${partPerSite}" />
+  	<arg value="${highCPU}" />
+  	<arg value="${lowCPU}" />
 	&common;
         <classpath refid='project.classpath' />
     <assertions><enable/></assertions>
