testing reconfiguration fixes

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -17,7 +17,7 @@ UpdateRecordProportion=0.15
 #ScanRecordProportion=0.30
 
 fixed_size = true
-num_records = 8000000
+num_records = 100000
 
 # Zipfian skew factor for tuple access
 # for 95% of accesses -> 5% of tuples
@@ -32,4 +32,4 @@ skew_factor = 0.96
 #shift=5
 #random_shift=false
 #num_hot_spots=10
-#percent_accesses_to_hot_spots=.95
+#percent_accesses_to_hot_spots=0.95
