Changed ycsb.properties for testing CPU%

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -9,7 +9,7 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 # Specify the distribution for key selection
 #requestdistribution=custom
-requestdistribution=zipfian
+#requestdistribution=zipfian
 
 # Override operation weights
 ReadRecordProportion=0.85
@@ -17,13 +17,13 @@ UpdateRecordProportion=0.15
 #ScanRecordProportion=0.30
 
 fixed_size = true
-num_records = 100000
+num_records = 4000000
 
 # Zipfian skew factor for tuple access
 # for 95% of accesses -> 5% of tuples
 #skew_factor = 1.27
 # something in the middle
-skew_factor = 0.96
+#skew_factor = 0.96
 # for 2/3 of accesses -> 1/3 of tuples
 #skew_factor = 0.65
 #scrambled=true
