Changed ycsb.properties for testing CPU%

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -9,6 +9,7 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 # Specify the distribution for key selection
 #requestdistribution=custom
+requestdistribution=uniform
 #requestdistribution=zipfian
 
 # Override operation weights
