made it optional for location of hot spots to be random

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -9,8 +9,8 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 
 # Specify the distribution for key selection
 #requestdistribution=custom
-requestdistribution=uniform
-#requestdistribution=zipfian
+#requestdistribution=uniform
+requestdistribution=zipfian
 
 # Override operation weights
 ReadRecordProportion=0.85
@@ -18,7 +18,8 @@ UpdateRecordProportion=0.15
 #ScanRecordProportion=0.30
 
 fixed_size = true
-num_records = 4000000
+num_records = 60000000
+loadthreads = 1
 
 # Zipfian skew factor for tuple access
 # for 95% of accesses -> 5% of tuples
@@ -26,11 +27,11 @@ num_records = 4000000
 # something in the middle
 #skew_factor = 0.96
 # for 2/3 of accesses -> 1/3 of tuples
-#skew_factor = 0.65
+skew_factor = 0.65
 #scrambled=true
 #mirrored=true
 #interval=3000
 #shift=5
 #random_shift=false
-#num_hot_spots=10
-#percent_accesses_to_hot_spots=0.95
+num_hot_spots=30
+percent_accesses_to_hot_spots=0.80
