prints all CPU utilizations before triggering reconfiguration

--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -18,7 +18,7 @@ UpdateRecordProportion=0.15
 #ScanRecordProportion=0.30
 
 fixed_size = true
-num_records = 60000000
+num_records = 60000
 loadthreads = 1
 
 # Zipfian skew factor for tuple access
