--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -8,6 +8,8 @@ builder = edu.brown.benchmark.ycsb.YCSBProjectBuilder
 # only add the number of tuples defined in 'num_records'
 
 # Specify the distribution for key selection
+#requestdistribution=custom
+#requestdistribution=uniform
 requestdistribution=zipfian
 
 # Override operation weights
@@ -16,7 +18,7 @@ UpdateRecordProportion=0.15
 #ScanRecordProportion=0.30
 
 fixed_size = true
-num_records = 60000000
+num_records = 100000
 loadthreads = 1
 
 # Zipfian skew factor for tuple access
@@ -25,11 +27,11 @@ loadthreads = 1
 # something in the middle
 #skew_factor = 0.96
 # for 2/3 of accesses -> 1/3 of tuples
-skew_factor = 0.65
+#skew_factor = 0.65
 #scrambled=true
 #mirrored=true
 #interval=3000
 #shift=5
 #random_shift=false
-num_hot_spots=30
-percent_accesses_to_hot_spots=0.80
+#num_hot_spots=30
+#percent_accesses_to_hot_spots=0.80
