--- a/properties/default.properties
+++ b/properties/default.properties
@@ -69,3 +69,5 @@ site.memory                 = 2048
 
 # Site Log Directory
 site.log_dir               = ${global.temp_dir}/logs/sites
+
+partitionplan=tpcc-plan.pplan
