--- a/properties/default.properties
+++ b/properties/default.properties
@@ -70,4 +70,4 @@ site.memory                 = 2048
 # Site Log Directory
 site.log_dir               = ${global.temp_dir}/logs/sites
 
-partitionplan=tpcc-plan.pplan
+partitionplan=tpcc-plan-warehouse-part.pplan #tpcc-plan.pplan
