--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -73,3 +73,9 @@ payment_multip_mix     = -1
 # Whether to force all Payment txns to touch partitions that  
 # are stored on different sites.
 payment_multip_remote   = false
+
+
+## HOTSPOT
+# neworder_hotspot = true
+# hotspot_ops_percent = 90
+# hotspot_size = 1
