new properties file for TPCC

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -7,13 +7,13 @@ workload.ignore     = LoadWarehouse,LoadWarehouseReplicated
 
 ## These parameters will make the benchmark use one WAREHOUSE
 ## and one loader thread per partition in the cluster
-warehouse_per_partition = true
-loadthread_per_warehouse = true
+warehouse_per_partition = false
+loadthread_per_warehouse = false
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-# warehouses = 4
-# loadthreads = 4
+warehouses = 600
+loadthreads = 60
 
 ## Testing Options
 ## See src/benchmarks/org/voltdb/benchmarks/tpcc/TPCCConfig.java
@@ -53,7 +53,19 @@ neworder_multip_mix     = -1
 neworder_multip_remote  = false
 
 # Whether to skew the selection of what warehouses to touch.
-neworder_skew_warehouse = false
+neworder_skew_warehouse = true
+
+# The zipfian skew factor
+client.skewfactor = 0.65
+
+# Whether to make a hotspot
+neworder_hotspot = true
+
+# Percentage of transactions going to hotspot
+hotspot_ops_percent = 60
+
+# Number of warehouses in hotspot
+hotspot_size = 6
 
 ## ------------------------------------------------------------
 ## PAYMENT OPTIONS
