updates to tpcc properties file

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -13,7 +13,7 @@ loadthread_per_warehouse = false
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
 warehouses = 600
-loadthreads = 60
+loadthreads = 600
 
 ## Testing Options
 ## See src/benchmarks/org/voltdb/benchmarks/tpcc/TPCCConfig.java
@@ -56,16 +56,16 @@ neworder_multip_remote  = false
 neworder_skew_warehouse = true
 
 # The zipfian skew factor
-client.skewfactor = 0.65
+# use ${client.skewfactor}
 
 # Whether to make a hotspot
-neworder_hotspot = true
+# neworder_hotspot = true
 
 # Percentage of transactions going to hotspot
-hotspot_ops_percent = 60
+# hotspot_ops_percent = 60
 
 # Number of warehouses in hotspot
-hotspot_size = 6
+# hotspot_size = 6
 
 ## ------------------------------------------------------------
 ## PAYMENT OPTIONS
