--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -12,7 +12,7 @@ loadthread_per_warehouse = false
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-warehouses = 600
+warehouses = 100
 loadthreads = 100
 
 ## Testing Options
@@ -59,13 +59,13 @@ neworder_skew_warehouse = true
 # use ${client.skewfactor}
 
 # Whether to make a hotspot
-# neworder_hotspot = true
+neworder_hotspot = true
 
 # Percentage of transactions going to hotspot
-# hotspot_ops_percent = 60
+hotspot_ops_percent = 60
 
 # Number of warehouses in hotspot
-# hotspot_size = 6
+hotspot_size = 10
 
 ## ------------------------------------------------------------
 ## PAYMENT OPTIONS
