fixed properties file

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -53,10 +53,19 @@ neworder_multip_mix     = -1
 neworder_multip_remote  = false
 
 # Whether to skew the selection of what warehouses to touch.
-#neworder_skew_warehouse = true
+neworder_skew_warehouse = true
 
 # The zipfian skew factor
 # use ${client.skewfactor}
+
+# Whether to make a hotspot
+neworder_hotspot = true
+
+# Percentage of transactions going to hotspot
+hotspot_ops_percent = 80
+
+# Number of warehouses in hotspot
+hotspot_size = 3
 
 ## ------------------------------------------------------------
 ## PAYMENT OPTIONS
@@ -78,7 +87,3 @@ payment_multip_mix     = -1
 payment_multip_remote   = false
 
 
-## HOTSPOT
-neworder_hotspot = true
-hotspot_ops_percent = 80
-hotspot_size = 3 
