--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -12,7 +12,7 @@ loadthread_per_warehouse = false
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-warehouses = 100
+warehouses = 8
 loadthreads = 100
 
 ## Testing Options
@@ -53,7 +53,7 @@ neworder_multip_mix     = -1
 neworder_multip_remote  = false
 
 # Whether to skew the selection of what warehouses to touch.
-neworder_skew_warehouse = true
+#neworder_skew_warehouse = true
 
 # The zipfian skew factor
 # use ${client.skewfactor}
@@ -65,7 +65,7 @@ neworder_hotspot = true
 hotspot_ops_percent = 80
 
 # Number of warehouses in hotspot
-hotspot_size = 3
+hotspot_size = 2
 
 ## ------------------------------------------------------------
 ## PAYMENT OPTIONS
@@ -85,5 +85,3 @@ payment_multip_mix     = -1
 # Whether to force all Payment txns to touch partitions that  
 # are stored on different sites.
 payment_multip_remote   = false
-
-
