--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -53,7 +53,7 @@ neworder_multip_mix     = -1
 neworder_multip_remote  = false
 
 # Whether to skew the selection of what warehouses to touch.
-neworder_skew_warehouse = true
+#neworder_skew_warehouse = true
 
 # The zipfian skew factor
 # use ${client.skewfactor}
@@ -85,3 +85,5 @@ payment_multip_mix     = -1
 # Whether to force all Payment txns to touch partitions that  
 # are stored on different sites.
 payment_multip_remote   = false
+
+
