--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -53,7 +53,7 @@ neworder_multip_mix     = -1
 neworder_multip_remote  = false
 
 # Whether to skew the selection of what warehouses to touch.
-#neworder_skew_warehouse = true
+neworder_skew_warehouse = true
 
 # The zipfian skew factor
 # use ${client.skewfactor}
