--- a/properties/benchmarks/voter.properties
+++ b/properties/benchmarks/voter.properties
@@ -11,5 +11,5 @@ skew_factor = 0.65
 #interval=3000
 #shift=5
 #random_shift=false
-#num_hot_spots=30
-#percent_accesses_to_hot_spots=0.80
+num_hot_spots=40
+percent_accesses_to_hot_spots=0.60
