default tpcc props

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -12,8 +12,8 @@ loadthread_per_warehouse = false
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-warehouses = 100
-loadthreads = 100
+#warehouses = 100
+#loadthreads = 100
 
 ## Testing Options
 ## See src/benchmarks/org/voltdb/benchmarks/tpcc/TPCCConfig.java
@@ -59,13 +59,13 @@ neworder_multip_remote  = false
 # use ${client.skewfactor}
 
 # Whether to make a hotspot
-neworder_hotspot = true
+#neworder_hotspot = true
 
 # Percentage of transactions going to hotspot
-hotspot_ops_percent = 80
+#hotspot_ops_percent = 80
 
 # Number of warehouses in hotspot
-hotspot_size = 3
+#hotspot_size = 3
 
 ## ------------------------------------------------------------
 ## PAYMENT OPTIONS
