--- a/properties/benchmarks/ycsb.properties
+++ b/properties/benchmarks/ycsb.properties
@@ -27,6 +27,6 @@ fixed_size = true
 #random_shift=false
 requestdistribution=zipfian
 skew_factor = 0.65
-num_hot_spots=30
-percent_accesses_to_hot_spots=0.80
-num_records = 60000000
+num_hot_spots=40
+percent_accesses_to_hot_spots=0.60
+num_records = 600000
