--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -7,13 +7,13 @@ workload.ignore     = LoadWarehouse,LoadWarehouseReplicated
 
 ## These parameters will make the benchmark use one WAREHOUSE
 ## and one loader thread per partition in the cluster
-warehouse_per_partition = False
-loadthread_per_warehouse = False
+warehouse_per_partition = false
+loadthread_per_warehouse = false
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-warehouses = 4
-loadthreads = 16
+warehouses = 8
+loadthreads = 100
 
 ## Testing Options
 ## See src/benchmarks/org/voltdb/benchmarks/tpcc/TPCCConfig.java
@@ -59,13 +59,13 @@ neworder_multip_remote  = false
 # use ${client.skewfactor}
 
 # Whether to make a hotspot
-neworder_hotspot = True
+#neworder_hotspot = true
 
 # Percentage of transactions going to hotspot
-hotspot_ops_percent = 80
+#hotspot_ops_percent = 80
 
 # Number of warehouses in hotspot
-hotspot_size = 3
+#hotspot_size = 3
 
 ## ------------------------------------------------------------
 ## PAYMENT OPTIONS
