--- a/properties/default.properties
+++ b/properties/default.properties
@@ -20,14 +20,14 @@ global.sshoptions = -x
 # This can't be removed from this file
 global.defaulthost = localhost
 
-global.hasher_class = edu.brown.hashing.PlannedHasher
+#global.hasher_class=edu.brown.hashing.PlannedHasher
 
 ## ------------------------------------------------------------
 ## Benchmark Client Parameters
 ## ------------------------------------------------------------
 
 # The amount of memory to allocate for each client process (in MB)
-client.memory = 6000
+client.memory = 512
 
 # Default client host name
 client.hosts = ${global.defaulthost}
@@ -35,24 +35,24 @@ client.hosts = ${global.defaulthost}
 # The number of txns that each client submits (per ms)
 # Actual TXN rate sent to cluster will be:
 #   TXNRATE * CLIENTCOUNT * PROCESSESPERCLIENT
-client.txnrate = 100000
+client.txnrate = 1000
 
 # Number of clients hosts to use in the benchmark
 # You can define the list of hosts use ${client.hosts}
 client.count = 1
 
 # Number of threads to use per benchmark client host
-client.threads_per_host = 15
+client.threads_per_host = 10
 
 # How long should the client run (milliseconds)
-client.duration = 150000
+client.duration = 60000
 
 # How long should the system be allowed to warmup (milliseconds)
 # Any stats collected during this period are not counted.
-client.warmup = 15000
+client.warmup = 10000
 
 # Polling interval (milliseconds)
-client.interval = 1000
+client.interval = 10000
 
 # Benchmark Database Scale Factor
 client.scalefactor = 1.0
@@ -65,39 +65,7 @@ client.log_dir = ${global.temp_dir}/logs/clients
 ## ------------------------------------------------------------
 
 # The amount of memory to allocate for each site (in MB)
-site.memory = 6144
+site.memory                 = 20048
 
 # Site Log Directory
 site.log_dir               = ${global.temp_dir}/logs/sites
-
-client.blocking = True
-client.blocking_concurrent = 2
-client.output_exec_profiling = execprofile.csv
-client.output_interval = true
-client.output_response_status = True
-client.output_results_csv = interval_res.csv
-client.output_txn_counters = txncounters.csv
-client.output_txn_profiling = txnprofile.csv
-client.output_txn_profiling_combine = True
-client.skewfactor = -1
-client.txn_hints = False
-global.hasher_plan = scripts/reconfiguration/plans/tpcc-size4-2.json
-site.commandlog_enable = False
-site.commandlog_timeout = 10
-site.cpu_affinity = True
-site.cpu_affinity_one_partition_per_core = True
-site.exec_db2_redirects = False
-site.exec_early_prepare = False
-site.exec_force_singlepartitioned = True
-site.exec_readwrite_tracking = False
-site.jvm_asserts = False
-site.log_backup = False
-site.markov_fixed = False
-site.planner_caching = False
-site.reconfig_async_chunk_size_kb = 8048
-site.reconfig_chunk_size_kb = 20048
-site.reconfig_split_merge_ranges = False
-site.specexec_enable = False
-site.status_enable = False
-site.txn_restart_limit = 5
-site.txn_restart_limit_sysproc = 100
