--- a/properties/benchmarks/affinity.properties
+++ b/properties/benchmarks/affinity.properties
@@ -8,4 +8,9 @@ builder = edu.mit.benchmark.affinity.AffinityProjectBuilder
 fixed_size = true
 #loadthreads = 1
 
-num_records = 100 
+#num_suppliers=100
+#num_products=1000
+#num_parts=10000
+
+#products.requestDistribution=zipfian
+#suppliers.requestDistribution=hotspot
