--- a/properties/benchmarks/affinity.properties
+++ b/properties/benchmarks/affinity.properties
@@ -8,9 +8,23 @@ builder = edu.mit.benchmark.affinity.AffinityProjectBuilder
 fixed_size = true
 #loadthreads = 1
 
-#num_suppliers=100
-#num_products=1000
-#num_parts=10000
+num_suppliers=100
+num_products=1000
+num_parts=10000
 
 #products.requestDistribution=zipfian
-#suppliers.requestDistribution=hotspot
+#suppliers.requestDistribution=zipfian
+
+product_to_parts_random_offset=false
+supplier_to_parts_random_offset=false
+uses.is_random=false
+supplies.is_random=false
+max_parts_per_supplier=100
+max_parts_per_product=10
+
+#product_to_parts_offset=0.01
+#supplier_to_parts_offset=0.01
+#uses.num_hot_spots=5
+#uses.percent_accesses_to_hot_spots=1
+#supplies.num_hot_spots=5
+#supplies.percent_accesses_to_hot_spots=1
