configuration parameters for experiments

--- a/properties/benchmarks/affinity.properties
+++ b/properties/benchmarks/affinity.properties
@@ -8,9 +8,9 @@ builder = edu.mit.benchmark.affinity.AffinityProjectBuilder
 fixed_size = true
 #loadthreads = 1
 
-num_suppliers=100
-num_products=1000
-num_parts=10000
+num_suppliers=300
+num_products=3000
+num_parts=30000
 
 #products.requestDistribution=zipfian
 #suppliers.requestDistribution=zipfian
@@ -23,7 +23,7 @@ max_parts_per_supplier=100
 max_parts_per_product=10
 
 #product_to_parts_offset=0.01
-#supplier_to_parts_offset=0.01
+supplier_to_parts_offset=0.5
 #uses.num_hot_spots=5
 #uses.percent_accesses_to_hot_spots=1
 #supplies.num_hot_spots=5
