updated twitter properties file

--- a/properties/benchmarks/twitter.properties
+++ b/properties/benchmarks/twitter.properties
@@ -3,5 +3,7 @@
 ## ------------------------------------------------------------
 
 builder = com.oltpbenchmark.benchmarks.twitter.TwitterProjectBuilder
-tweets_file = data/twitter_tweetids.txt
-users_file = data/twitter_user_ids.txt
+#tweets_file = data/twitter_tweetids.txt
+#users_file = data/twitter_user_ids.txt
+network_file = ../twitter_rv.net
+max_user_id = 5000
