--- a/log4j.properties
+++ b/log4j.properties
@@ -38,6 +38,7 @@ log4j.logger.org.voltdb.VoltSystemProcedure=INFO
 log4j.logger.org.voltdb.client=INFO
 log4j.logger.org.voltdb.compiler=INFO
 log4j.logger.org.voltdb.planner=INFO
+log4j.logger.org.voltdb.sysprocs=TRACE
 
 ## Research Projects
 log4j.logger.edu.brown.hstore.estimators=INFO
