--- a/build.xml
+++ b/build.xml
@@ -2638,5 +2638,36 @@ UTILITIES
     <assertions><enable/></assertions>
     </java>
 </target>
+
+<target name='affinity-profile'
+        description="H-Store Affinity Controller">
+  <java fork="yes" failonerror="true" classname="org.qcri.affinityplanner.Controller">
+        <jvmarg value="-client" />
+        <jvmarg value="-agentpath:/home/mserafini/yjp-2014-build-14120/bin/linux-x86-64/libyjpagent.so=port=10001" />
+        <jvmarg value="-Xms256m" />
+        <jvmarg value="-Xmx${client.memory}m" />
+        <jvmarg value="-Dlog4j.configuration=${basedir}/log4j.properties"/>
+        <jvmarg value="-Djava.library.path=${build.dir}/nativelibs:${thirdpartydynlib.dir}" />
+        <arg value="catalog.jar=${benchmark.jar}" />
+	    <arg value="elastic.monitoring_time=${elastic.monitoring_time}" />
+	    <arg value="elastic.min_load=${elastic.min_load}" />
+    	<arg value="elastic.max_load=${elastic.max_load}" />
+    	<arg value="elastic.dtxn_cost=${elastic.dtxn_cost}" />
+    	<arg value="elastic.lmpt_cost=${elastic.lmpt_cost}" />
+    	<arg value="elastic.max_tuples_move=${elastic.max_tuples_move}" />
+    	<arg value="elastic.min_gain_move=${elastic.min_gain_move}" />
+    	<arg value="elastic.max_partitions_added=${elastic.max_partitions_added}" />
+		<arg value="elastic.run_monitoring=${elastic.run_monitoring}" />
+		<arg value="elastic.update_plan=${elastic.update_plan}" />
+		<arg value="elastic.exec_reconf=${elastic.exec_reconf}" />
+		<arg value="elastic.plan_in=${elastic.plan_in}" />
+		<arg value="elastic.plan_out=${elastic.plan_out}" />
+	&common;
+        <classpath refid='project.classpath' />
+    <assertions><enable/></assertions>
+    </java>
+</target>
+
 <!-- END PROJECT -->
+
 </project>
