--- a/properties/benchmarks/twitter.properties
+++ b/properties/benchmarks/twitter.properties
@@ -5,5 +5,5 @@
 builder = com.oltpbenchmark.benchmarks.twitter.TwitterProjectBuilder
 #tweets_file = data/twitter_tweetids.txt
 #users_file = data/twitter_user_ids.txt
-network_file = twitter-graph/twitter_rv.net
+#network_file = twitter-graph/twitter_rv.net
 max_user_id = 30000
